app/src/main/java/com/example/calcomanias_rocket/app/errors/ErrorUiModel.kt
package com.example.calcomanias_rocket.app.errors

interface ErrorUiModel {

}